use template to show shell dir in index.html.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ div, input {
 
 <body>
 <div id="address">
-	<input class="full-width" style="font-size:20px" type="text" value="/home/kybin"/>
+	<input class="full-width" style="font-size:20px" type="text" value="{{.Dir}}"/>
 </div>
 <div id="output">
 	<div>please is not exist please is not exist please is not exist please is not exist please is not exist please is not exist please is not exist please is not exist please is not exist please is not exist please is not exist please is not exist please is not exist please is not exist please is not exist please is not exist please is not exist please is not exist </div>
